style.css
/* ... */
  div#console div.error {
    background-color:#400;
    border-color:#800;
    color:#fa4;
    text-shadow:0px 0px 15px #c30;
    }

  div#console div.warning {
    background-color:#630;
    border-color:#a50;
    color:#fe4;
    text-shadow:0px 0px 15px #c80;
    }

  div#console div.ok {
    background-color:#040;
    border-color:#080;
    color:#cfc;
    text-shadow:0px 0px 15px #0c6;
    }

/* Exceptions */
/* make sure devel module messages are readable */
div.krumo-root, div.krumo-root a {
  color: black;
  text-shadow: none;
}

/**
 * FOOTER =============================================================
 */
#footer {
  background:#666;
  padding:20px 0px;
  line-height:40px;
  height:40px;
  }

#footer ul.links { float:right; }

/**
 * FORMS ==============================================================
 */
select,
textarea,
input.form-text {
  width:90%;
  font: 13px/20px "Helvetica Neue",Arial,sans-serif;
  padding:3px;
  border:1px solid #ddd;
  background-color:#fff;
  }

  select:focus,
  textarea:focus,
  input.form-text:focus {
    background-color:#f0f8ff;
    border-color:#abc;
    }

  div.reverse select,
  div.reverse textarea,
  div.reverse input.form-text {
    background-color:#124;
    color:#fff;
    border-color:#258;
    }

  html.js input.form-autocomplete { background-position:100% 4px; }
  html.js input.throbbing { background-position: 100% -16px; }

  td select,
  td input.form-text,
  div.container-inline select,
  div.container-inline input.form-text { width:auto; }

input.form-submit {
  font: bold 13px/20px "Helvetica Neue",Arial,sans-serif;
  border:0px;
  padding:5px 10px;
  color:#fff;
  background:#666;

  cursor:pointer;

  -moz-border-radius:3px;
  -webkit-border-radius: 3px;
  }


input.form-submit[disabled] {
  color:#ddd;
  background:#eee;
  cursor: default;
}


  body.page-admin input.form-submit,
  body.page-admin #views-ajax-pad .form-submit {
    padding: 0 4px;
    }

  div.reverse input.form-submit { background:#124; }

form div.form-item {
  clear:both;
  position:relative;
  margin:0px;
  padding:10px 10px 9px;
  border-bottom:1px solid #e8e8e8;
  }

  form div.form-item-labeled { padding-left:180px; }

  form div.form-item-labeled label {
    font-size:11px;
    position:absolute;
    left:0px;
    width:170px;
    }

  /* Exceptions */
  body.page-admin div.form-item,
  dl.multiselect div.form-item,
  div.sidebar form div.form-item,
  form#system-theme-settings div.form-item,
  form div.form-item div.form-item,
  form table div.form-item,
  form div.container-inline div.form-item,
  form div.form-checkboxes div.form-item,
  form div.form-radios div.form-item {
    clear:none;
    padding:0px;
    border:0px;
    }

  body.page-admin div.form-item label,
  dl.multiselect div.form-item label,
  div.sidebar form div.form-item label,
  form div.form-item label.option,
  form#system-theme-settings div.form-item label,
  form div.form-item div.form-item label,
  form table div.form-item label,
  form div.container-inline div.form-item label,
  form div.form-checkboxes div.form-item label,
  form div.form-radios div.form-item label {
    width:auto;
    position:static;
    }

div.form-item label.option,
div.form-item label.option * {
  font-size:1em;
  vertical-align:middle;
  }

div.form-item div.description {
  margin:5px 0px;
  line-height:15px;
  font-size:11px;
  color:#666;
  }

form input#edit-publish-path {
  width:auto;
  }

/* Fieldsets... what a nightmare */
body.aegir fieldset {
  background:#f8f8f8;

  margin:10px 0px;
  padding:25px 10px 10px;
  border:0px;

  display:block;
  -moz-border-radius:3px;
  -webkit-border-radius: 3px;
  }

  body.aegir fieldset.collapsible {
    position:relative;
    padding:25px 0px 0px;
    }

    body.aegir fieldset.collapsible div.fieldset-wrapper { padding:10px; }

  html.js body.aegir fieldset.collapsed {
    height:0px;
    margin:10px 0px;
    background:transparent;
    }

body.aegir fieldset legend {
  font-size:11px;
  font-weight:bold;
  margin-bottom:-25px;
  }

  body.aegir fieldset.collapsible legend { margin:0px; }

body.aegir fieldset.collapsible legend a,
html.js body.aegir fieldset.collapsible legend a {
  position:absolute;
  right:0px;
  left:0px;

  background:#eee;
  font-size:11px;

  display:block;
  padding:2px 10px 3px;
  }

body.aegir fieldset.collapsible legend a {
  -moz-border-radius-topleft:3px;
  -moz-border-radius-topright:3px;
  -webkit-border-top-left-radius: 3px;
  -webkit-border-top-right-radius: 3px;
  }

  body.aegir fieldset.collapsed legend a {
    -moz-border-radius:3px;
    -webkit-border-radius:3px;
    }

/**
 * NODES ==============================================================
 */
div.node {
  margin:0px 0px 10px;
  padding:0px 0px 9px;
  border-bottom:1px solid #e8e8e8;
  }

div.sticky {
  padding:4px 4px 9px;
  border:1px solid #e0e6e8;
  background:#f0f6f8;
  }

  /* Cancel out all the particulars for full node pages */
  body.node-page div.node {
    background:transparent;
    border:0px;
    padding:0px;
    margin:0px;
    }

div.node h2 {
  border:0px;
  font-size:24px;
  line-height:30px;
  font-weight:normal;
  }

  div.node h2 span.label {
    float:left;
    font-size:9px;
    font-weight:bold;
    line-height:20px;

    margin:5px 10px 0px 0px;
    padding:0px 5px;

    background:#666;
    color:#fff;
    }

div.node div.submitted {
  color:#888;
  margin:0px 0px 10px;
  font-size:11px;
  }

  body.node-page div.node div.submitted {
    border-bottom:1px solid #e8e8e8;
    padding:0px 0px 9px;
    }

div.node ul.links {
  float:right;
  font-size:11px;
  }

  div.node ul.links li a {
    border-right:1px solid #e8e8e8;
    padding:0px 10px;
    }

  div.node ul.links li.last a {
    border:0px;
    padding-right:0px;
    }

/**
 * AEGIR-SPECIFIC =====================================================
 */
div#hosting-wizard-form,
div.error,
div.message { width:auto; }

#hosting-task-log { clear:both; }
/* ... */

